--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,1 +1,1 @@
-<html><head></head><body>This is the body for the home page</body></html>
+<html><head></head><body>This is the body for the home page.</body></html>
